--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <button onclick="search()">Search</button>
         </div>
         <div class="btn">
-            <a href="https://adornadowilliam2.github.io/Andylyn"><button>AndylynBirthday</button></a>
-            <a href="https://adornadowilliam2.github.io/Calendar/"><button>Karla Calendar</button></a>
+            <a href="https://adornadowilliam2.github.io/"><button>AndylynBirthday</button></a>
+            <a href="https://adornadowilliam2.github.io//"><button>Karla Calendar</button></a>
         </div>   
     </div>
     <script>
